--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -152,6 +152,11 @@ Apr 22, 2012
 by Stuart Halloway, Aaron Bedra +
 Apr 20, 2012
 
+| image::http://clojure-buch.de/cover.jpg[Clojure,link="http://clojure-buch.de/",width=130]
+| http://clojure-buch.de/[Clojure] +
+by Stefan Kamphausen, Tim Oliver Kaiser +
+Sep 20, 2010
+
 | image::http://ecx.images-amazon.com/images/I/51dWGdAPwUL._SL160.jpg[Practical Clojure, link="http://amzn.com/1430272317"]
 | http://amzn.com/1430272317[Practical Clojure] +
 by Luke VanderHart, Stuart Sierra +
