--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -15,14 +15,22 @@ The <<xref/../../../about/spec#,spec>> library specifies the structure of data, 
 
 [source, clojure]
 ----
-[org.clojure/clojure "1.9.0-alpha12"]
+[org.clojure/clojure "1.9.0-alpha13"]
 ----
 
-To start working with spec, require the `clojure.spec` namespace or include in your namespace definition:
+To start working with spec, require the `clojure.spec` namespace at the REPL:
 
 [source,clojure]
 ----
 (require '[clojure.spec :as s])
+----
+
+Or include spec in your namespace:
+
+[source,clojure]
+----
+(ns my.ns
+  (:require [clojure.spec :as s]))
 ----
 
 == Predicates
