--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -11,11 +11,13 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 * http://repo1.maven.org/maven2/org/clojure/clojure/1.8.0/clojure-1.8.0.zip[Clojure 1.8.0]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
+* Requirements: Java 1.6, 1.7, or 1.8
 
 == Development Release: 1.9.0-alpha14
 
 * http://repo1.maven.org/maven2/org/clojure/clojure/1.9.0-alpha14/clojure-1.9.0-alpha14.zip[Clojure 1.9.0-alpha14]
 * http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.9.0*[Clojure 1.9 pre-release builds]
+* Requirements: Java 1.6, 1.7, or 1.8
 
 == Clojure Source
 
