fix line breaks and image

--- a/content/events/2017/clojurex.adoc
+++ b/content/events/2017/clojurex.adoc
@@ -16,8 +16,8 @@ Have your say in how we put the conference together via our https://skillsmatter
 
 We hope you will https://skillsmatter.com/conferences/8783-clojure-exchange-2017[join us] and meet hundreds of people from the London Clojurians community and many other like-minded people from around the world.
 
-Thank you
-London Clojurians
+Thank you +
+London Clojurians +
 https://twitter.com/ldnclj
 
-image::https://github.com/jr0cket/london-clojurians-logo/blob/master/london-clojurians-text-highlight-lambda-jr0cket.png[London Clojurians logo]
+image::https://raw.githubusercontent.com/jr0cket/london-clojurians-logo/master/london-clojurians-text-highlight-lambda-jr0cket.png[London Clojurians logo]
