--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -174,6 +174,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.quintype.com/[Quintype]
 * https://www.rallydev.com/[Rally]
 * https://www.rareburg.com/[Rareburg]
+* https://www.redhat.com/[Red Hat]
 * https://www.redpineapplemedia.com/[Red Pineapple Media]
 * http://rentpath.com/[RentPath]
 * http://rjmetrics.com/[RJMetrics]
