Add Cybozu Startups to the list companies

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -58,6 +58,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * https://www.concur.com/[Concur]
 * http://www.consumerreports.org/cro/index.htm[Consumer Reports]
 * http://www.consumerfinance.gov/[CFPB (Credit Financial Protection Bureau)]
+* http://www.cstap.com/[Cybozu Startups]
 * http://www.cycloid.io[Cycloid]
 * http://www.dailymail.co.uk/[Daily Mail MailOnline]
 * https://www.databaselabs.io/[Database Labs]
